<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <EditText
        android:id="@+id/nameOfTrainingDBInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/training_name"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete"
        android:minHeight="100dp"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/roundNumberDBInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginTop="176dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/nombre_de_round"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="100dp"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/nameOfTrainingDBInput"
        tools:layout_editor_absoluteX="30dp" />

    <EditText
        android:id="@+id/roundTimeDBInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/temp_du_round"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="100dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/roundNumberDBInput"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/restTimeDBInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/temps_de_repos"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="100dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/roundTimeDBInput"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginBottom="32dp"
        android:background="@color/yellow"
        android:text="@string/add"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints,TextContrastCheck"
        tools:layout_editor_absoluteX="12dp" />



</androidx.constraintlayout.widget.ConstraintLayout>